name:                Hashids
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Hashids#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Hashids
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010

-- executable Hashids-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , Hashids
--   default-language:    Haskell2010

test-suite Hashids-test
  type:                exitcode-stdio-1.0
  -- hs-source-dirs:      .
  main-is:             Tests.hs
  build-depends:       base
                     , Hashids
                     , vector
                     , HUnit
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Hashids
